2014-05-19  Kirit Saelensminde  <kirit@felspar.com>
 Change the way that `boost::filesystem::wpath` instances are converted from strings in order to fix a Boost bug on Android.

2014-05-16  Kirit Saelensminde  <kirit@felspar.com>
 Add in a JSON setting store, `fostlib::settings`. Add `-j` default command line switch so that it can be used rather than an INI file.

2014-05-09  Kirit Saelensminde  <kirit@felspar.com>
 Use Boost UUID library starting with version 1.42.
 Fix a bug where bounds checking cause a build failure on platforms with unsigned char.

2014-03-21  Kirit Saelensminde  <kirit@felspar.com>
 Coercion from larger to smaller ints requires different implementations for signed and unsigned types. Silences a warning about a comparison always being true when an unsigned value is compared with zero.
 Fixed another gcc warning for later versions of Boost about unused typedefs.

2014-02-28  Kirit Saelensminde  <kirit@felspar.com>
 Allow dates to have days added and subtracted from them.
 Add `today` member to `fostlib::date`.

2014-02-27  Kirit Saelensminde  <kirit@felspar.com>
 Added a new `split` member to jcursor to allow one to be created by splitting up a single string.

2014-01-14  Kirit Saelensminde  <kirit@felspar.com>
 Fix some warnings for a couple of compilers.

2014-01-12  Kirit Saelensminde  <kirit@felspar.com>
 If clang is on the path for Linux then use that in preference to gcc
 Extend the `fostlib::timestamp` and `fostlib::date` interfaces somewhat. Added a number of missing coercions and constructors to make things simpler and made sure that there is no loss in precision when converting to and from strings and JSON. Moved a number of timestamp and date members inline for speed.

2013-08-20  Kirit Saelensminde  <kirit@felspar.com>
 Added `fostlib::log::flush()` which blocks until the previous logged messages have been processed.

2013-06-07  Kirit Saelensminde  <kirit@felspar.com>